<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="setting">&#x906;</string>
    <string name="getData">&#xe6d5;</string>
    <string name="incomplete">&#xe6f9;</string>
    <string name="progress">&#xe600;</string>
    <string name="fire">&#xe673;</string>
    <string name="point">&#xe61a;</string>
    <string name="search">&#xe6a2;</string>
    <string name="like">&#xec7f;</string>
    <string name="range">&#xec1e;</string>
    <string name="wiki">&#xe7cb;</string>
    <string name="book">&#xe621;</string>
    <string name="problem">&#xec2e;</string>
    <string name="notebook">&#xe6f3;</string>
    <string name="hot">&#xe8c9;</string>
    <string name="topic2">&#xe8b1;</string>
    <string name="looktimes">&#xe628;</string>
    <string name="society_history">&#xe63e;</string>
    <string name="society_ruler">&#xe6b5;</string>
    <string name="society_pencil">&#xe605;</string>
    <string name="hot_like">&#xe630;</string>
    <string name="society_progress">&#xe63f;</string>
    <string name="society_score">&#xe606;</string>
    <string name="society_problem">&#xe623;</string>
    <string name="society_more">&#xe614;</string>
    <string name="society_distance">&#xe622;</string>
    <string name="society_commend">&#xe8b4;</string>
    <string name="yinhao">&#xe853;</string>
    <string name="quill">&#xe611;</string>
    <string name="painting_brush">&#xe612;</string>
    <string name="Find_activities">&#xe796;</string>
    <string name="My_footprint">&#xe657;</string>
    <string name="My_Experience">&#xe6b7;</string>







    <string name="setting_tile_1">\t\t账号</string>
    <string name="setting_tile_2">\t\t常规</string>
    <string name="setting_tile_3">\t\t主题</string>
    <string name="setting_tile_4">\t\t高级</string>
    <string name="setting_content_1">\t\t\t\t15815436542</string>
    <string name="setting_content_2">\t\t\t\t切换账号</string>
    <string name="setting_content_3">\t\t\t\t隐私</string>
    <string name="setting_content_4">\t\t\t\t地区和语言</string>
    <string name="setting_content_5">\t\t\t\t权限</string>
    <string name="setting_content_6">\t\t\t\t清除缓存</string>
    <string name="setting_content_7">\t\t\t\t浅色</string>
    <string name="setting_content_8">\t\t\t\t深色</string>
    <string name="setting_content_9">\t\t\t\t自动</string>
    <string name="setting_content_10">\t\t\t\t反馈</string>
    <string name="setting_content_11">\t\t\t\t关于</string>
    <string name="setting_content_12">\t\t\t\t下载内容</string>

    <!--    下面的没有用-->
    <string name="title_activity_points_task">PointsTaskActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="_1980">1980</string>
    <string name="movablestring1">心得领悟，分享喜悦</string>
    <string name="movabtitlelestring1">我的心得</string>
    <string name="movabletitlestring2">我的足迹</string>
    <string name="movablestring2">足迹遍洒，记忆长存</string>
    <string name="movablestring3">快乐寻觅，无限精彩</string>
    <string name="movabletitlestring3">寻找活动</string>

</resources>