<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_society"
    >

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">


    </androidx.viewpager.widget.ViewPager>


    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="活动"
        android:background="@color/bg_100"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/adImg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rounded_white"
        android:padding="5dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/viewpager" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="370dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/adImg">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_white_top"
            android:paddingLeft="2dp"
            android:paddingTop="8dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adImg">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_findactivity2"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="@+id/imageView7">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:text="@string/movabletitlestring3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Big_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/movablestring3"
                    app:layout_constraintEnd_toEndOf="@+id/textView14"
                    app:layout_constraintStart_toStartOf="@+id/textView14"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginRight="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:paddingTop="8dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">


            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/background_findactivity1"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/image_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/image_view">

                <TextView
                    android:id="@+id/text_view1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/movabletitlestring2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Big_text_size" />

                <TextView
                    android:id="@+id/text_view2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/movablestring2"
                    app:layout_constraintEnd_toEndOf="@+id/text_view1"
                    app:layout_constraintStart_toStartOf="@+id/text_view1"
                    app:layout_constraintTop_toBottomOf="@+id/text_view1" />
            </LinearLayout>

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="110dp"
                android:layout_height="110dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/customConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"


            android:background="@color/white"
            android:paddingLeft="2dp"
            android:paddingTop="8dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">


            <LinearLayout
                android:id="@+id/customLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_findactivity3"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/customImageView"
                app:layout_constraintStart_toStartOf="@+id/customImageView"
                app:layout_constraintTop_toTopOf="@+id/customImageView">

                <TextView
                    android:id="@+id/customTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:text="@string/movabtitlelestring1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Big_text_size" />

                <TextView
                    android:id="@+id/customTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/movablestring1"
                    app:layout_constraintEnd_toEndOf="@+id/customTextView1"
                    app:layout_constraintStart_toStartOf="@+id/customTextView1"
                    app:layout_constraintTop_toBottomOf="@+id/customTextView1" />
            </LinearLayout>

            <ImageView
                android:id="@+id/customImageView"
                android:layout_width="110dp"
                android:layout_height="110dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


    <View
        android:id="@+id/divider15"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:layout_editor_absoluteX="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>